fix: debug hover overflow (#781)

--- a/packages/core-browser/src/style/monaco-override.less
+++ b/packages/core-browser/src/style/monaco-override.less
@@ -53,6 +53,12 @@
     .monaco-tl-twistie {
       box-sizing: initial !important;
     }
+
+    .debug-hover-widget {
+      position: absolute;
+      margin-top: -1px;
+      z-index: 50;
+    }
   }
 }
 
